# 2025-26-teama

./: .envrc  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
src/: main.rs
src/opcontrol/: normal.rs
src/routes/: first.rs  mod.rs
src/subsystems/: drivetrain_actions.rs  intake.rs  lift.rs  match_loader.rs  mod.rs
