[package]
name = "teama-2025-26"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = "z"
lto = "fat"

[profile.release]
opt-level = "z"
lto = "fat"

[package.metadata.v5]
upload-strategy = "differential"
slot = 1
icon = "cool-x"
compress = true

[dependencies]
async-trait = "0.1.89"
doxa-selector = { path = "../doxa-selector-rs" }
log = "0.4.22"
libdoxa = { path = "../libdoxa", features = ["unsafe_debug_render"] }
snafu = "0.8.5"
pid = "4.0.0"
vexide-motorgroup = "2.2.0-alpha.6"
nalgebra = { version = "0.33.2", default-features = false, features = [
  "macros",
  "alloc",
  "libm",
] }

[dependencies.vexide]
version = "0.8.0-alpha.2"
features = ["full", "vex-sdk-jumptable", "vex-sdk-mock"]

[features]
default = ["ui"]
ui = ["doxa-selector/ui"]
